<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/first_name"
        android:ems="10"
        android:id="@+id/editText_FirstName"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        android:ems="10"
        android:id="@+id/editText_LastName"
        android:layout_below="@id/editText_FirstName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/log_reg"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:ems="10"
        android:id="@+id/editText_Username"
        android:layout_below="@id/editText_LastName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/log_reg"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText_Email"
        android:layout_below="@id/editText_Username"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/log_reg"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_Password"
        android:layout_below="@id/editText_Email"
        android:layout_centerHorizontal="true"
        android:hint="@string/pass"
        android:layout_marginTop="@dimen/log_reg"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_RePassword"
        android:layout_below="@id/editText_Password"
        android:layout_centerHorizontal="true"
        android:hint="@string/re_pass"
        android:layout_marginTop="@dimen/log_reg"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/button_create_account"
        android:background="@color/background_blue"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_below="@id/editText_RePassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>